# todo-full-stack-ai-chatbot-web-application

./: .gitignore  README.md
.claude/: settings.local.json
.specify/memory/: constitution.md
.specify/scripts/bash/: check-prerequisites.sh  create-phr.sh  implement.sh
.specify/scripts/powershell/: update-agent-context.ps1
backend/: .gitignore  README.md  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/agents/: chat_agent.py
backend/src/api/: auth.py  chat_endpoints.py  todos.py
backend/src/core/: config.py  database.py  security.py
backend/src/mcp/: server.py
backend/src/mcp/tools/: add_task.py  complete_task.py  complete_task_by_description.py  delete_task.py  delete_task_by_description.py  list_tasks.py  search_tasks_by_title.py  update_task.py  update_task_by_description.py
backend/src/middleware/: auth.py
backend/src/models/: conversation.py  message.py
backend/src/services/: conversation_service.py  message_service.py  task_adapter_service.py  todo_service.py
frontend/: .gitignore  README.md  next.config.ts
frontend/app/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: dashboard-navbar.tsx  notifications.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx  protected-layout.tsx
frontend/src/components/: ChatBotUI.tsx  ChatInterface.tsx  dashboard-navbar.tsx  notifications.tsx
frontend/src/config/: apiConfig.ts
frontend/src/services/: chatService.ts
frontend/src/utils/: api.ts
specs/1-ai-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+77 files in other folders)
